# dice_gmtk22

./: .gitignore  CMakeLists.txt  README.md  makefile
doc/: graphic_notes  itch_io_description  youtube
doc/art/: players.kra
doc/azcraft/: arena.xcf  base.xcf  bg_dice.xcf  forest.xcf  hud_dice.xcf  modes.xcf  progress_barl.xcf  red_circle.xcf  todo.txt
doc/crystal/: bake.sh
doc/path/: convert.py  output.txt
src/core/: config.hpp  config.hpp.in  core.cpp  game.hpp  init.cpp  version.hpp  version.hpp.in
src/game/: camera.cpp  camera.hpp  data.hpp  game.hpp  handle_event.cpp  init.cpp  private_board.hpp  render.cpp  terrain.hpp  textures.cpp  textures.hpp  tick.cpp
src/game/battle/: background.cpp  collision.cpp  crystal.cpp  crystal.hpp  crystal_attack.cpp  events.cpp  finish.cpp  game_over.cpp  hud.cpp  motion.cpp  player.cpp  player.hpp  render.cpp  render.hpp  state.cpp  state.hpp  tick.cpp  tick.hpp
src/game/board/: background.cpp  motion.cpp  path.cpp  path.hpp  pawn.cpp  pawn.hpp  private.hpp  render.cpp  tick.cpp
src/game/menu/: render.cpp  tick.cpp
src/game/story/: click.cpp  play.cpp  render.cpp  scenes.hpp  story.hpp  tick.cpp
src/utils/: point.hpp  random.cpp  random.hpp
